--- a/CacxClient/App.xaml
+++ b/CacxClient/App.xaml
@@ -2,8 +2,95 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CacxClient"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Windows/LoginWindow.xaml">
     <Application.Resources>
-         
+        <!--#region Window Styles-->
+        <Style TargetType="Window" x:Key="BaseWindowStyle">
+            <Setter Property="Background" Value="#1f1e1f"/>
+            <Setter Property="MinHeight" Value="450"/>
+            <Setter Property="MinWidth" Value="800"/>
+            <Setter Property="Height" Value="450"/>
+            <Setter Property="Width" Value="800"/>
+        </Style>
+
+        <Style TargetType="Window" x:Key="SmallWindowStyle" BasedOn="{StaticResource BaseWindowStyle}">
+            <Setter Property="MaxHeight" Value="450"/>
+            <Setter Property="MaxWidth" Value="800"/>
+        </Style>
+        <!--#endregion-->
+        
+        <!--#region TextBox Styles-->
+
+        <Style TargetType="TextBox" x:Key="BaseTextBoxStyle">
+            <Setter Property="Background" Value="#2e2d2e"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Padding" Value="0, 5, 0, 0"/>
+            <Setter Property="Foreground" Value="#000000"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <Border x:Name="Border"
+                            CornerRadius="8"
+                            BorderBrush="#1a191a"
+                            BorderThickness="2"
+                            Background="{TemplateBinding Background}">
+                            <ScrollViewer x:Name="PART_ContentHost"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsFocused" Value="True">
+                                <Setter TargetName="Border" Property="BorderBrush" Value="#cccccc"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="TextBox" BasedOn="{StaticResource BaseTextBoxStyle}"/>
+
+        <!--#endregion-->
+        
+        <!--#region TextBlock-->
+        <Style TargetType="TextBlock" x:Key="BaseTextBlockStyle">
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+        </Style>
+
+        <Style TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}"/>
+
+        <Style TargetType="TextBlock" x:Key="FloatingLabelStyle" BasedOn="{StaticResource BaseTextBlockStyle}">
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <TranslateTransform Y="0"/>
+                </Setter.Value>
+            </Setter>
+
+            <Style.Triggers>
+                <EventTrigger RoutedEvent="GotFocus">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(TranslateTransform.Y)"
+                                             To="-200" Duration="0:0:0.2"/>
+                            <DoubleAnimation Storyboard.TargetProperty="FontSize"
+                                             To="12" Duration="0:0:0.2"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+
+                <EventTrigger RoutedEvent="LostFocus">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(TranslateTransform.Y)"
+                             To="0" Duration="0:0:0.2"/>
+                            <DoubleAnimation Storyboard.TargetProperty="FontSize"
+                             To="16" Duration="0:0:0.2"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Style.Triggers>
+        </Style>
+
+        <!--#endregion-->
     </Application.Resources>
 </Application>
