--- a/CacxClient/Windows/CreateAccWindow.xaml
+++ b/CacxClient/Windows/CreateAccWindow.xaml
@@ -10,5 +10,6 @@
     <Grid>
         <cc:TextBoxTextBlock Label="Email:" Width="200" Height="35" Margin="0, 0, 0, 100"/>
         <cc:TextBoxTextBlock Label="Password:" Width="200" Height="35" Margin="0, 50, 0, 0"/>
+        <Button x:Name="GeneratePwBtn" Style="{StaticResource IconBtnStyle}" Width="35" Height="35" Content="🎲" Margin="250, 50, 0, 0"/>
     </Grid>
 </local:BaseWindow>
