--- a/CacxClient/Windows/CreateAccWindow.xaml
+++ b/CacxClient/Windows/CreateAccWindow.xaml
@@ -11,5 +11,6 @@
         <cc:TextBoxTextBlock Label="Email:" Width="200" Height="35" Margin="0, 0, 0, 100"/>
         <cc:TextBoxTextBlock Label="Password:" Width="200" Height="35" Margin="0, 50, 0, 0"/>
         <Button x:Name="GeneratePwBtn" Style="{StaticResource IconBtnStyle}" Width="35" Height="35" Content="🎲" Margin="250, 50, 0, 0"/>
+        <ComboBox x:Name="" Height="25" Width="50"/>
     </Grid>
 </local:BaseWindow>
