--- a/CacxClient/App.xaml
+++ b/CacxClient/App.xaml
@@ -1,307 +1,17 @@
 ﻿<Application x:Class="CacxClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CacxClient"
-             StartupUri="Windows/LoginWindow.xaml">
+             xmlns:local="clr-namespace:CacxClient">
     <Application.Resources>
-
-        <!--#region StoryBoard Animations-->
-
-        <Storyboard x:Key="BounceAnimation">
-            <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
-                To="0.9" Duration="0:0:0.12" AutoReverse="True"/>
-            <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleY)"
-                To="0.9" Duration="0:0:0.12" AutoReverse="True"/>
-        </Storyboard>
-
-        <Storyboard x:Key="HoverBorderBrushAnimation">
-            <Storyboard>
-                <ColorAnimation To="#cccccc" Duration="0:0:0.3" Storyboard.TargetName="Border" 
-                    Storyboard.TargetProperty="(BorderBrush).(SolidColorBrush.Color)"/>
-            </Storyboard>
-        </Storyboard>
-
-        <Storyboard x:Key="UnHoverBorderBrushAnimation">
-            <Storyboard>
-                <ColorAnimation To="#1a191a" Duration="0:0:0.2" Storyboard.TargetName="Border" 
-                    Storyboard.TargetProperty="(BorderBrush).(SolidColorBrush.Color)"/>
-            </Storyboard>
-        </Storyboard>
-        <!--#endregion-->
-
-        <!--#region Window Styles-->
-        <Style TargetType="Window" x:Key="BaseWindowStyle">
-            <Setter Property="Background" Value="#1f1e1f"/>
-            <Setter Property="MinHeight" Value="450"/>
-            <Setter Property="MinWidth" Value="800"/>
-            <Setter Property="Height" Value="450"/>
-            <Setter Property="Width" Value="800"/>
-        </Style>
-
-        <Style TargetType="Window" x:Key="SmallWindowStyle" BasedOn="{StaticResource BaseWindowStyle}">
-            <Setter Property="MaxHeight" Value="450"/>
-            <Setter Property="MaxWidth" Value="800"/>
-        </Style>
-        <!--#endregion-->
-
-        <!--#region TextBox Styles-->
-
-        <Style TargetType="TextBox" x:Key="BaseTextBoxStyle">
-            <Setter Property="Background" Value="#2e2d2e"/>
-            <Setter Property="FontSize" Value="15"/>
-            <Setter Property="Padding" Value="0, 5, 0, 0"/>
-            <Setter Property="Foreground" Value="#000000"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="TextBox">
-                        <Border x:Name="Border"
-                            CornerRadius="8"
-                            BorderBrush="#1a191a"
-                            BorderThickness="2"
-                            Background="{TemplateBinding Background}">
-                            <ScrollViewer x:Name="PART_ContentHost"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsFocused" Value="True">
-                                
-                                <Trigger.EnterActions>
-                                    <BeginStoryboard>
-                                        <Storyboard>
-                                            <ColorAnimation To="#cccccc" Duration="0:0:0.3"
-                                                Storyboard.TargetProperty="(Button.Foreground).(SolidColorBrush.Color)"/>
-                                            <ColorAnimation To="#cccccc" Duration="0:0:0.5" Storyboard.TargetName="Border" 
-                                                Storyboard.TargetProperty="(BorderBrush).(SolidColorBrush.Color)"/>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </Trigger.EnterActions>
-                                <Trigger.ExitActions>
-                                    <BeginStoryboard>
-                                        <Storyboard>
-                                            <ColorAnimation To="#000000" Duration="0:0:0.2"
-                                                Storyboard.TargetProperty="(Button.Foreground).(SolidColorBrush.Color)"/>
-                                            <ColorAnimation To="#1a191a" Duration="0:0:0.2" Storyboard.TargetName="Border" 
-                                                Storyboard.TargetProperty="(BorderBrush).(SolidColorBrush.Color)"/>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </Trigger.ExitActions>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style TargetType="TextBox" BasedOn="{StaticResource BaseTextBoxStyle}"/>
-
-        <!--#endregion-->
-
-        <!--#region TextBlock-->
-        <Style TargetType="TextBlock" x:Key="BaseTextBlockStyle">
-            <Setter Property="FontSize" Value="15"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-        </Style>
-
-        <Style TargetType="TextBlock" x:Key="IconTextBlockStyle">
-            <Setter Property="FontSize" Value="21"/>
-            <Setter Property="FontWeight" Value="Light"/>
-        </Style>
-
-        <Style TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}"/>
-
-        <Style TargetType="TextBlock" x:Key="FloatingLabelStyle" BasedOn="{StaticResource BaseTextBlockStyle}">
-            <Setter Property="RenderTransform">
-                <Setter.Value>
-                    <TranslateTransform Y="0"/>
-                </Setter.Value>
-            </Setter>
-
-            <Style.Triggers>
-                <EventTrigger RoutedEvent="GotFocus">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(TranslateTransform.Y)"
-                                To="-200" Duration="0:0:0.2"/>
-                            <DoubleAnimation Storyboard.TargetProperty="FontSize"
-                                To="12" Duration="0:0:0.2"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-
-                <EventTrigger RoutedEvent="LostFocus">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(TranslateTransform.Y)"
-                                To="0" Duration="0:0:0.2"/>
-                            <DoubleAnimation Storyboard.TargetProperty="FontSize"
-                                To="16" Duration="0:0:0.2"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </Style.Triggers>
-        </Style>
-
-        <!--#endregion-->
-
-        <!--#region Button Styles-->
-
-        <Style x:Key="BaseButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="#2e2d2e"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border x:Name="Border" 
-                    CornerRadius="8" 
-                    BorderBrush="#1a191a"
-                    BorderThickness="2"
-                    Background="{TemplateBinding Background}">
-
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" RecognizesAccessKey="True"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style TargetType="Button" BasedOn="{StaticResource BaseButtonStyle}">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border x:Name="Border" 
-                            CornerRadius="8" 
-                            BorderBrush="#1a191a"
-                            BorderThickness="2"
-                            Background="{TemplateBinding Background}">
-
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" RecognizesAccessKey="True"/>
-                        </Border>
-
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Cursor" Value="Hand"/>
-                                <Trigger.EnterActions>
-                                    <BeginStoryboard>
-                                        <Storyboard>
-                                            <ColorAnimation To="#cccccc" Duration="0:0:0.3"
-                                                Storyboard.TargetProperty="(Button.Foreground).(SolidColorBrush.Color)"/>
-                                            <ColorAnimation To="#cccccc" Duration="0:0:0.3" Storyboard.TargetName="Border" 
-                                                Storyboard.TargetProperty="(BorderBrush).(SolidColorBrush.Color)"/>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </Trigger.EnterActions>
-                                <Trigger.ExitActions>
-                                    <BeginStoryboard>
-                                        <Storyboard>
-                                            <ColorAnimation To="#000000" Duration="0:0:0.2"
-                                                Storyboard.TargetProperty="(Button.Foreground).(SolidColorBrush.Color)"/>
-                                            <ColorAnimation To="#1a191a" Duration="0:0:0.2" Storyboard.TargetName="Border" 
-                                                Storyboard.TargetProperty="(BorderBrush).(SolidColorBrush.Color)"/>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </Trigger.ExitActions>
-                            </Trigger>
-
-                            <!--Click/Bounce Animation-->
-                            <EventTrigger RoutedEvent="Button.Click">
-                                <BeginStoryboard Storyboard="{StaticResource BounceAnimation}" HandoffBehavior="Compose"/>
-                            </EventTrigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-
-            <!--Set the origin to x: 0.5 and y: 0.5 aka. the middle of the button-->
-            <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
-            <Setter Property="RenderTransform">
-                <Setter.Value>
-                    <ScaleTransform x:Name="btnScale" ScaleX="1" ScaleY="1"/>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style x:Key="IconBtnStyle" TargetType="Button" BasedOn="{StaticResource BaseButtonStyle}">
-            <!--Give the internal TextBlock a specific style-->
-            <Setter Property="ContentTemplate">
-                <Setter.Value>
-                    <DataTemplate>
-                        <TextBlock Style="{StaticResource IconTextBlockStyle}" Text="{Binding}"/>
-                    </DataTemplate>
-                </Setter.Value>
-            </Setter>
-
-            <!--Set the origin to x: 0.5 and y: 0.5 aka. the middle of the button-->
-            <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
-            <Setter Property="RenderTransform">
-                <Setter.Value>
-                    <ScaleTransform x:Name="btnScale" ScaleX="1" ScaleY="1"/>
-                </Setter.Value>
-            </Setter>
-
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border x:Name="Border"
-                        CornerRadius="8"
-                        BorderBrush="#1a191a"
-                        BorderThickness="2"
-                        Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-
-                        <ControlTemplate.Triggers>
-                            <!-- Hover Brush -->
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Cursor" Value="Hand"/>
-                                <Trigger.EnterActions>
-                                    <BeginStoryboard Storyboard="{StaticResource HoverBorderBrushAnimation}"/>
-                                </Trigger.EnterActions>
-                                <Trigger.ExitActions>
-                                    <BeginStoryboard Storyboard="{StaticResource UnHoverBorderBrushAnimation}"/>
-                                </Trigger.ExitActions>
-                            </Trigger>
-
-                            <!-- Click-Animation -->
-                            <EventTrigger RoutedEvent="Button.Click">
-                                <BeginStoryboard Storyboard="{StaticResource BounceAnimation}" HandoffBehavior="Compose"/>
-                            </EventTrigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <!--#endregion-->
-
-        <!--#region Hyperlink Styles-->
-
-        <Style TargetType="Hyperlink">
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="FontSize" Value="13"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Cursor" Value="Hand"/>
-                    <Trigger.EnterActions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation To="White" Duration="0:0:0.2"
-                                Storyboard.TargetProperty="(Button.Foreground).(SolidColorBrush.Color)"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </Trigger.EnterActions>
-                    <Trigger.ExitActions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation To="Black" Duration="0:0:0.2"
-                                Storyboard.TargetProperty="(Button.Foreground).(SolidColorBrush.Color)"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </Trigger.ExitActions>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
-        <!--#endregion-->
-
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/StoryboardStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/TextBlockStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/HyperlinkStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/TextBoxStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/WindowStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
