--- a/CacxClient/Windows/CreateAccWindow.xaml
+++ b/CacxClient/Windows/CreateAccWindow.xaml
@@ -11,6 +11,8 @@
         <cc:TextBoxTextBlock x:Name="EmailTextBox" Label="Email:" Width="200" Height="35" Margin="0, 0, 0, 100"/>
         <cc:TextBoxTextBlock x:Name="PasswordTextBox" Label="Password:" Width="200" Height="35" Margin="0, 50, 0, 0"/>
         <Button x:Name="GeneratePwBtn" Style="{StaticResource IconBtnStyle}" Width="35" Height="35" Content="🎲" Margin="250, 50, 0, 0"/>
-        <ComboBox x:Name="DayBox" Margin="0, 160, 0, 0" Height="25" Width="50"/>
+        <ComboBox Style="{DynamicResource ComboBoxSytle}" x:Name="MonthBox" Margin="0, 160, 120, 0" Height="25" Width="50"/>
+        <ComboBox Style="{DynamicResource ComboBoxSytle}" x:Name="DayBox" Margin="0, 160, 15, 0" Height="25" Width="50"/>
+        <ComboBox Style="{DynamicResource ComboBoxSytle}" x:Name="YearBox" Margin="100, 160, 0, 0" Height="25" Width="60"/>
     </Grid>
 </local:BaseWindow>
