--- a/CacxClient/Styles/WindowStyles.xaml
+++ b/CacxClient/Styles/WindowStyles.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="Window" x:Key="BaseWindowStyle">
-        <Setter Property="Background" Value="#1f1e1f"/>
+        <Setter Property="Background" Value="{DynamicResource WindowBrush}"/>
         <Setter Property="MinHeight" Value="450"/>
         <Setter Property="MinWidth" Value="800"/>
         <Setter Property="Height" Value="450"/>
