--- a/CacxClient/Windows/CreateAccPart2Window.xaml
+++ b/CacxClient/Windows/CreateAccPart2Window.xaml
@@ -4,9 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CacxClient.Windows"
+        xmlns:cc="clr-namespace:CacxClient.CostumComponents"
         mc:Ignorable="d"
         Title="CreateAccPart2Window" Height="450" Width="800" Style="{StaticResource SmallWindowStyle}">
     <Grid>
+        <Ellipse Width="70" Height="70" Margin="0, 0, 150, 200"/>
+        <cc:TextBoxTextBlock Width="140" Height="35" Label="Username" Margin="80, 0, 0, 170"/>
         
+        <cc:TextBoxTextBlock Width="220" Height="35" Margin="10, 0, 0, 40" Label="First Name"/>
+        <cc:TextBoxTextBlock Width="220" Height="35"  Margin="10, 85, 0, 0" Label="Last Name"/>
+
+        <cc:TextBoxTextBlock Width="220" Height="35" Margin="0, 250, 0, 0" Label="Biography"/>
     </Grid>
 </local:BaseWindow>
