--- a/CacxClient/Windows/CreateAccWindow.xaml
+++ b/CacxClient/Windows/CreateAccWindow.xaml
@@ -1,4 +1,4 @@
-﻿<local:BaseWindow x:Class="CacxClient.Windows.CreateAccWindow"
+﻿<local:BaseWindow x:Class="CacxClient.Windows.CreateAccWindowPart2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
